backend/lang/LaTeXParser.py
# Generated from LaTeX.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class LaTeXParser(Parser):

    grammarFileName = "LaTeX.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'ans'",
        "<INVALID>",
        "'\\'",
        "'`'",
        "'('",
        "')'",
        "'{'",
        "'}'",
        "'['",
        "']'",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
        "'^'",
        "'&'",
        "'.'",
        "'='",
        "'\\neq'",
        "<INVALID>",
        "'\\leq'",
        "<INVALID>",
        "'\\geq'",
        "':='",
        "'cases'",
        "'matrix'",
        "'pmatrix'",
        "'bmatrix'",
        "'vmatrix'",
        "'_'",
        "','",
        "'\\pi'",
        "'e'",
        "'i'",
        "<INVALID>",
        "<INVALID>",
        "'\\cdot'",
        "'\\times'",
        "'\\div'",
        "'\\frac'",
        "'\\begin'",
        "'\\end'",
        "'\\to'",
        "'\\rightarrow'",
        "'\\dd'",
        "'\\lim'",
        "'\\int'",
        "'\\sum'",
        "'\\prod'",
        "'\\dv'",
        "'\\pdv'",
        "'\\sqrt'",
        "'\\binom'",
        "'\\gcd'",
        "'\\log'",
        "'\\ln'",
        "'\\exp'",
        "'\\sin'",
        "'\\cos'",
        "'\\tan'",
        "'\\sec'",
        "'\\csc'",
        "'\\cot'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'\\lfloor'",
        "'\\rfloor'",
        "'\\lceil'",
        "'\\rceil'",
        "'\\infty'",
        "'-\\infty'",
        "'$'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "WS",
        "BS",
        "BACKTICK",
        "LPAREN",
        "RPAREN",
        "LCURLY",
        "RCURLY",
        "LBRACK",
        "RBRACK",
        "PLUS",
        "MINUS",
        "MULT",
        "DIV",
        "CARET",
        "AMPERSAND",
        "POINT",
        "EQ",
        "NEQ",
        "LT",
        "LTE",
        "GT",
        "GTE",
        "ASSIGN",
        "CASES",
        "MATRIX",
        "P_MATRIX",
        "B_MATRIX",
        "V_MATRIX",
        "UNDERSCORE",
        "COMMA",
        "PI",
        "E",
        "I",
        "NON_EI_LETTER",
        "DIGIT",
        "CMD_CDOT",
        "CMD_TIMES",
        "CMD_DIV",
        "CMD_FRAC",
        "CMD_BEGIN",
        "CMD_END",
        "CMD_TO",
        "CMD_RIGHTARROW",
        "CMD_DD",
        "FUNC_LIM",
        "FUNC_INT",
        "FUNC_SUM",
        "FUNC_PROD",
        "FUNC_DV",
        "FUNC_PDV",
        "FUNC_SQRT",
        "FUNC_CHOOSE",
        "FUNC_GCD",
        "FUNC_LOG",
        "FUNC_LN",
        "FUNC_EXP",
        "FUNC_SIN",
        "FUNC_COS",
        "FUNC_TAN",
        "FUNC_SEC",
        "FUNC_CSC",
        "FUNC_COT",
        "FUNC_ASIN",
        "FUNC_ACOS",
        "FUNC_ATAN",
        "FUNC_ASEC",
        "FUNC_ACSC",
        "FUNC_ACOT",
        "CMD_LFLOOR",
        "CMD_RFLOOR",
        "CMD_LCEIL",
        "CMD_RCEIL",
        "INFINITY",
        "NEG_INFINITY",
        "DOLLAR",
    ]

    RULE_hist_entry = 0
    RULE_number = 1
    RULE_nnint = 2
    RULE_multichar_var = 3
    RULE_var_name = 4
    RULE_var = 5
    RULE_tex_symb = 6
    RULE_func_builtin = 7
    RULE_func_call = 8
    RULE_entry = 9
    RULE_castle_input = 10
    RULE_relation = 11
    RULE_relop = 12
    RULE_expr = 13
    RULE_add_expr = 14
    RULE_mult_expr = 15
    RULE_implicit_mult_expr = 16
    RULE_var_pow_expr = 17
    RULE_paren_pow_expr = 18
    RULE_implicit_pow_expr = 19
    RULE_left_implicit_pow_expr = 20
    RULE_pow_expr = 21
    RULE_var_parens = 22
    RULE_unit = 23
    RULE_unit_paren = 24
    RULE_implicit_mult_unit = 25
    RULE_left_implicit_mult_unit = 26
    RULE_var_def = 27
    RULE_arg_list = 28
    RULE_func_def = 29
    RULE_assignment = 30
    RULE_fraction = 31
    RULE_cases_last_row = 32
    RULE_cases_row = 33
    RULE_cases_exp = 34
    RULE_cases_env = 35
    RULE_matrix_last_row = 36
    RULE_matrix_row = 37
    RULE_matrix_exp = 38
    RULE_matrix_env = 39

    ruleNames = [
        "hist_entry",
        "number",
        "nnint",
        "multichar_var",
        "var_name",
        "var",
        "tex_symb",
        "func_builtin",
        "func_call",
        "entry",
        "castle_input",
        "relation",
        "relop",
        "expr",
        "add_expr",
        "mult_expr",
        "implicit_mult_expr",
        "var_pow_expr",
        "paren_pow_expr",
        "implicit_pow_expr",
        "left_implicit_pow_expr",
        "pow_expr",
        "var_parens",
        "unit",
        "unit_paren",
        "implicit_mult_unit",
        "left_implicit_mult_unit",
        "var_def",
        "arg_list",
        "func_def",
        "assignment",
        "fraction",
        "cases_last_row",
        "cases_row",
        "cases_exp",
        "cases_env",
        "matrix_last_row",
        "matrix_row",
        "matrix_exp",
        "matrix_env",
    ]

    EOF = Token.EOF
    T__0 = 1
    WS = 2
    BS = 3
    BACKTICK = 4
    LPAREN = 5
    RPAREN = 6
    LCURLY = 7
    RCURLY = 8
    LBRACK = 9
    RBRACK = 10
    PLUS = 11
    MINUS = 12
    MULT = 13
    DIV = 14
    CARET = 15
    AMPERSAND = 16
    POINT = 17
    EQ = 18
    NEQ = 19
    LT = 20
    LTE = 21
    GT = 22
    GTE = 23
    ASSIGN = 24
    CASES = 25
    MATRIX = 26
    P_MATRIX = 27
    B_MATRIX = 28
    V_MATRIX = 29
    UNDERSCORE = 30
    COMMA = 31
    PI = 32
    E = 33
    I = 34
    NON_EI_LETTER = 35
    DIGIT = 36
    CMD_CDOT = 37
    CMD_TIMES = 38
    CMD_DIV = 39
    CMD_FRAC = 40
    CMD_BEGIN = 41
    CMD_END = 42
    CMD_TO = 43
    CMD_RIGHTARROW = 44
    CMD_DD = 45
    FUNC_LIM = 46
    FUNC_INT = 47
    FUNC_SUM = 48
    FUNC_PROD = 49
    FUNC_DV = 50
    FUNC_PDV = 51
    FUNC_SQRT = 52
    FUNC_CHOOSE = 53
    FUNC_GCD = 54
    FUNC_LOG = 55
    FUNC_LN = 56
    FUNC_EXP = 57
    FUNC_SIN = 58
    FUNC_COS = 59
    FUNC_TAN = 60
    FUNC_SEC = 61
    FUNC_CSC = 62
    FUNC_COT = 63
    FUNC_ASIN = 64
    FUNC_ACOS = 65
    FUNC_ATAN = 66
    FUNC_ASEC = 67
    FUNC_ACSC = 68
    FUNC_ACOT = 69
    CMD_LFLOOR = 70
    CMD_RFLOOR = 71
    CMD_LCEIL = 72
    CMD_RCEIL = 73
    INFINITY = 74
    NEG_INFINITY = 75
    DOLLAR = 76

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class Hist_entryContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return LaTeXParser.RULE_hist_entry

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class Hist_indexContext(Hist_entryContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a LaTeXParser.Hist_entryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DOLLAR(self):
            return self.getToken(LaTeXParser.DOLLAR, 0)

        def nnint(self):
            return self.getTypedRuleContext(LaTeXParser.NnintContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterHist_index"):
                listener.enterHist_index(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitHist_index"):
                listener.exitHist_index(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitHist_index"):
                return visitor.visitHist_index(self)
            else:
                return visitor.visitChildren(self)

    class Hist_ansContext(Hist_entryContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a LaTeXParser.Hist_entryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DOLLAR(self):
            return self.getToken(LaTeXParser.DOLLAR, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterHist_ans"):
                listener.enterHist_ans(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitHist_ans"):
                listener.exitHist_ans(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitHist_ans"):
                return visitor.visitHist_ans(self)
            else:
                return visitor.visitChildren(self)

    def hist_entry(self):

        localctx = LaTeXParser.Hist_entryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_hist_entry)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                localctx = LaTeXParser.Hist_indexContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(LaTeXParser.DOLLAR)
                self.state = 81
                self.nnint()
                pass

            elif la_ == 2:
                localctx = LaTeXParser.Hist_ansContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.match(LaTeXParser.DOLLAR)
                self.state = 83
                self.match(LaTeXParser.T__0)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumberContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINUS(self):
            return self.getToken(LaTeXParser.MINUS, 0)

        def DIGIT(self, i: int = None):
            if i is None:
                return self.getTokens(LaTeXParser.DIGIT)
            else:
                return self.getToken(LaTeXParser.DIGIT, i)

        def POINT(self):
            return self.getToken(LaTeXParser.POINT, 0)

        def getRuleIndex(self):
            return LaTeXParser.RULE_number

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNumber"):
                listener.enterNumber(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNumber"):
                listener.exitNumber(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNumber"):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)

    def number(self):

        localctx = LaTeXParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_number)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == LaTeXParser.MINUS:
                self.state = 86
                self.match(LaTeXParser.MINUS)

            self.state = 90
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 89
                    self.match(LaTeXParser.DIGIT)

                else:
                    raise NoViableAltException(self)
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
            if la_ == 1:
                self.state = 94
                self.match(LaTeXParser.POINT)
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)
                while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 95
                        self.match(LaTeXParser.DIGIT)
                    self.state = 100
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NnintContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i: int = None):
            if i is None:
                return self.getTokens(LaTeXParser.DIGIT)
            else:
                return self.getToken(LaTeXParser.DIGIT, i)

        def getRuleIndex(self):
            return LaTeXParser.RULE_nnint

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNnint"):
                listener.enterNnint(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNnint"):
                listener.exitNnint(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNnint"):
                return visitor.visitNnint(self)
            else:
                return visitor.visitChildren(self)

    def nnint(self):

        localctx = LaTeXParser.NnintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nnint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 103
                    self.match(LaTeXParser.DIGIT)

                else:
                    raise NoViableAltException(self)
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 5, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Multichar_varContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NON_EI_LETTER(self, i: int = None):
            if i is None:
                return self.getTokens(LaTeXParser.NON_EI_LETTER)
            else:
                return self.getToken(LaTeXParser.NON_EI_LETTER, i)

        def E(self, i: int = None):
            if i is None:
                return self.getTokens(LaTeXParser.E)
            else:
                return self.getToken(LaTeXParser.E, i)

        def I(self, i: int = None):
            if i is None:
                return self.getTokens(LaTeXParser.I)
            else:
                return self.getToken(LaTeXParser.I, i)

        def DIGIT(self, i: int = None):
            if i is None:
                return self.getTokens(LaTeXParser.DIGIT)
            else:
                return self.getToken(LaTeXParser.DIGIT, i)

        def getRuleIndex(self):
            return LaTeXParser.RULE_multichar_var

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMultichar_var"):
                listener.enterMultichar_var(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMultichar_var"):
                listener.exitMultichar_var(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMultichar_var"):
                return visitor.visitMultichar_var(self)
            else:
                return visitor.visitChildren(self)

    def multichar_var(self):

        localctx = LaTeXParser.Multichar_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_multichar_var)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 108
                _la = self._input.LA(1)
                if not (
                    (
                        ((_la) & ~0x3F) == 0
                        and (
                            (1 << _la)
                            & (
                                (1 << LaTeXParser.E)
                                | (1 << LaTeXParser.I)
                                | (1 << LaTeXParser.NON_EI_LETTER)
                                | (1 << LaTeXParser.DIGIT)
                            )
                        )
                        != 0
                    )
                ):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (
                    (
                        ((_la) & ~0x3F) == 0
                        and (
                            (1 << _la)
                            & (
                                (1 << LaTeXParser.E)
                                | (1 << LaTeXParser.I)
                                | (1 << LaTeXParser.NON_EI_LETTER)
                                | (1 << LaTeXParser.DIGIT)
                            )
                        )
                        != 0
                    )
                ):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_nameContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return LaTeXParser.RULE_var_name

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class Var_name_multicharContext(Var_nameContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a LaTeXParser.Var_nameContext
            super().__init__(parser)
            self.name = None  # Multichar_varContext
            self.copyFrom(ctx)

        def BACKTICK(self, i: int = None):
            if i is None:
                return self.getTokens(LaTeXParser.BACKTICK)
            else:
                return self.getToken(LaTeXParser.BACKTICK, i)

        def multichar_var(self):
            return self.getTypedRuleContext(LaTeXParser.Multichar_varContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVar_name_multichar"):
                listener.enterVar_name_multichar(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVar_name_multichar"):
                listener.exitVar_name_multichar(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVar_name_multichar"):
                return visitor.visitVar_name_multichar(self)
            else:
                return visitor.visitChildren(self)

    class Var_name_letterContext(Var_nameContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a LaTeXParser.Var_nameContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NON_EI_LETTER(self):
            return self.getToken(LaTeXParser.NON_EI_LETTER, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVar_name_letter"):
                listener.enterVar_name_letter(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVar_name_letter"):
                listener.exitVar_name_letter(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVar_name_letter"):
                return visitor.visitVar_name_letter(self)
            else:
                return visitor.visitChildren(self)

    def var_name(self):

        localctx = LaTeXParser.Var_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_name)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LaTeXParser.NON_EI_LETTER]:
                localctx = LaTeXParser.Var_name_letterContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(LaTeXParser.NON_EI_LETTER)
                pass
            elif token in [LaTeXParser.BACKTICK]:
                localctx = LaTeXParser.Var_name_multicharContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(LaTeXParser.BACKTICK)
                self.state = 115
                localctx.name = self.multichar_var()
                self.state = 116
                self.match(LaTeXParser.BACKTICK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_name(self):
            return self.getTypedRuleContext(LaTeXParser.Var_nameContext, 0)

        def UNDERSCORE(self):
            return self.getToken(LaTeXParser.UNDERSCORE, 0)

        def tex_symb(self):
            return self.getTypedRuleContext(LaTeXParser.Tex_symbContext, 0)

        def getRuleIndex(self):
            return LaTeXParser.RULE_var

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVar"):
                listener.enterVar(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVar"):
                listener.exitVar(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVar"):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)

    def var(self):

        localctx = LaTeXParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.var_name()
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 8, self._ctx)
            if la_ == 1:
                self.state = 121
                self.match(LaTeXParser.UNDERSCORE)
                self.state = 122
                self.tex_symb()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
